# Jumptag

./: .gitignore  Cargo.toml  README.md  build.sh  configure.sh  jt.sh
src/: main.rs  script.rs
src/interface/: cmd.rs  mod.rs  parser.rs
src/tagbase/: errors.rs  mod.rs  tagbase.rs
