[package]
name = "jumptag"
version = "0.1.1"
edition = "2021"
description = "Jump to directory using tags as shorthand."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Da1sypetals/jumptag"

[[bin]]
name = "jt"
path = "src/main.rs"

[dependencies]
redb = "2.2.0"
thiserror = "1.0.68"
clap = { version = "4.5.20", features = ["derive", "cargo"] }
colorful = "0.3.2"
regex = "1.11.1"
